2003-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed atomix from gnome-i18n.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Sorted gpdf correctly.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gimp-perl.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimp-tips to 2.1-extras.

2003-02-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved gcalctool and zenity to
	2.1-fifth-toe.

2003-02-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.
	Reflect this.

2003-02-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched. Reflect
	this.

2003-02-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added stickynotes_applet to
	2.1-fifth-toe.

2003-02-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added themus to 2.1-extras.

2003-02-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Massive changes; tried to correct the
	modules used for 2.1 Fifth Toe by using the Fifth Toe web site.

2003-01-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved seahorse to 2.1-fifth-toe.

2003-01-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added libgtcpsocket to 2.1-extras.

2003-01-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: vte has been branched. Reflect
	this.

2003-01-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gftp to 2.1-extras.

2003-01-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched. Reflect
	this.

2003-01-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed xchat entry. xchat
	translations are now managed by the Translation Project.

2003-01-27  Christian Rose  <menthos@menthos.com>
