@@ -1168,13 +1168,6 @@
     </version>
   </module>
   <module name="glimmer">
-    <version release="gnome-1.4-fifth-toe">
-      <component name="glimmer" dir="gnome-i18n">
-	<podir dir="extra-po/glimmer"/>
-	<potname name="glimmer.pot"/>
-	<branch name="HEAD"/>
-      </component>
-    </version>
     <version release="gnome-2.0-extras">
       <component name="glimmer" dir="glimmer">
 	<podir dir="po"/>
