@@ -1,5 +1,9 @@
 2003-02-12  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed glimmer from gnome-i18n.
+
+2003-02-12  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Removed atomix from gnome-i18n.
 
 2003-02-09  Christian Rose  <menthos@menthos.com>
